<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_actividad"
        android:icon="@drawable/ic_book_black"
        android:title="@string/actividad" />

    <item
        android:id="@+id/nav_salud"
        android:icon="@drawable/ic_file_medical_black"
        android:title="@string/salud" />

    <item
        android:id="@+id/nav_principal"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/principal" />

    <item
        android:id="@+id/nav_alimentacion"
        android:icon="@drawable/ic_food_black"
        android:title="@string/alimentacion" />

    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/perfil" />
</menu>